objects/IPM_Director_s_Brief__c.object
<CustomObject>
    <description>IPMG - Tracks approval of director&apos;s brief within an Insurer Review Process, or independently.</description>
    <fields>
        <fullName>IPM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Director&apos;s Briefs</relationshipLabel>
        <relationshipName>Director_s_Briefs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Approved_by_ED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is manually captured by Portfolio Manager</description>
        <inlineHelpText>This is manually captured by Portfolio Manager</inlineHelpText>
        <label>Approved by ED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Document_Location__c</fullName>
        <label>Document Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Escalated_Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalated Complaint</label>
        <referenceTo>IPM_Escalated_Complaint__c</referenceTo>
        <relationshipLabel>Director&apos;s Briefs</relationshipLabel>
        <relationshipName>Director_s_Briefs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Insurer_Review_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurer Review Process</label>
        <referenceTo>IPM_Insurer_Review_Process__c</referenceTo>
        <relationshipLabel>Director&apos;s Briefs</relationshipLabel>
        <relationshipName>Director_s_Briefs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Requires_ED_Approval__c</fullName>
        <description>This is manually captured by Portfolio Manager</description>
        <inlineHelpText>This is manually captured by Portfolio Manager</inlineHelpText>
        <label>Requires ED Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Requires_QA_Approval__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to drive step 1 of the approval process for Technical Manager review</description>
        <label>Requires QA Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Director&apos;s Brief</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IPM_Account__c</columns>
        <columns>IPM_Document_Location__c</columns>
        <columns>IPM_Status__c</columns>
        <columns>IPM_Requires_ED_Approval__c</columns>
        <columns>IPM_Approved_by_ED__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Director_s_Briefs</fullName>
        <columns>NAME</columns>
        <columns>IPM_Account__c</columns>
        <columns>IPM_Document_Location__c</columns>
        <columns>IPM_Status__c</columns>
        <columns>IPM_Requires_ED_Approval__c</columns>
        <columns>IPM_Approved_by_ED__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Director&apos;s Briefs</label>
    </listViews>
    <nameField>
        <label>Director&apos;s Brief Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Director&apos;s Briefs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>